@@ -12,6 +12,7 @@ mod commonmark;
 mod core;
 mod description_lists;
 mod empty;
+mod escape;
 mod escaped_char_spans;
 mod footnotes;
 mod front_matter;
